Added comments to summary page. Put comments fields correctly in VacacnyViewModel.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/EditorTemplates/Comment.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/EditorTemplates/Comment.cshtml
@@ -1,9 +1,21 @@
 ﻿@model string
-<details>
-    <summary>Add comment on vacancy</summary>
-    <div class="detail-content">
+
+@{
+    var state = string.IsNullOrWhiteSpace(Model) ? string.Empty : "open";
+}
+
+<style>
+    .qa-comment {
+        background: yellow;
+        padding: 20px;   
+    }
+</style>
+<details @state>
+    <summary>Comment</summary>
+    <div class="detail-content qa-comment">
+        <div>QA Comment</div>
         <div class="blocklabel-single-container">
-            @Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, new { @class = "form-control", placeholder = ViewData.ModelMetadata.Watermark ?? ViewData.ModelMetadata.DisplayName ?? ViewData.ModelMetadata.PropertyName })
+            @Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, new {@class = "form-control"})
         </div>
     </div>
 </details>
