Fix a bug when submitting a summary page with warnings for first time.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Summary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Summary.cshtml
@@ -18,6 +18,7 @@
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
+    @Html.HiddenFor(m => m.AcceptWarnings)
 
     <section>
         <div class="form-group">
