--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/ValidationSummary.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Common.Validators
+﻿@using System.Linq
+@using SFA.Apprenticeships.Web.Common.Validators
 @using SFA.Apprenticeships.Web.Common.Validators.Extensions
 @model ModelStateDictionary
 
