--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -132,93 +132,108 @@
 
     <div class="grid-wrapper">
         <div class="grid grid-1-1">
-                <section>
-                    <div class="grid-wrapper font-xsmall med-btm-margin">
-                        @*<div class="grid grid-2-3">
-                            <div class="inner-block-padr">
-                                <select name="" id="" class="form-label">
-                                    <option value="" hidden>-- Filter vacancies --</option>
-                                    <option value="">Employer</option>
-                                    <option value="">Title</option>
-                                    <option value="">Framework</option>
-                                </select>
-                                <input type="text" class="form-control width-all-1-1" id="filter-employers">
-                            </div>
-                        </div>
-                        <div class="grid grid-1-3 ta-right">
-                            <input type="text" class="form-control invisible med-btm-margin">
-                            <select name="" id="" class="small-right-margin">
-                                <option value="" hidden>-- Filter status --</option>
-                                <option value="">All</option>
-                                <option value="">Live</option>
-                                <option value="">For review</option>
-                                <option value="">Submitted</option>
-                                <option value="">Drafts</option>
-                                <option value="">Closed</option>
+            <section>
+                <div class="grid-wrapper font-xsmall med-btm-margin">
+                    @*<div class="grid grid-2-3">
+                        <div class="inner-block-padr">
+                            <select name="" id="" class="form-label">
+                                <option value="" hidden>-- Filter vacancies --</option>
+                                <option value="">Employer</option>
+                                <option value="">Title</option>
+                                <option value="">Framework</option>
                             </select>
-                        </div>*@
+                            <input type="text" class="form-control width-all-1-1" id="filter-employers">
+                        </div>
                     </div>
-                    <div class="tabbed-element tab1 active width-all-1-1">
-                        <table class="no-btm-margin">
-                            <colgroup>
-                                <col class="t25">
-                                <col class="t20">
-                                <col class="t20">
-                                <col class="t20">
-                                <col class="t15">
-                            </colgroup>
-                            <thead>
+                    <div class="grid grid-1-3 ta-right">
+                        <input type="text" class="form-control invisible med-btm-margin">
+                        <select name="" id="" class="small-right-margin">
+                            <option value="" hidden>-- Filter status --</option>
+                            <option value="">All</option>
+                            <option value="">Live</option>
+                            <option value="">For review</option>
+                            <option value="">Submitted</option>
+                            <option value="">Drafts</option>
+                            <option value="">Closed</option>
+                        </select>
+                    </div>*@
+                </div>
+                <div class="tabbed-element tab1 active width-all-1-1">
+                    <table class="no-btm-margin">
+                        <colgroup>
+                            <col class="t25">
+                            <col class="t20">
+                            <col class="t20">
+                            <col class="t20">
+                            <col class="t15">
+                        </colgroup>
+                        <thead>
+                        <tr>
+                            <th>Vacancy title</th>
+                            <th>Employer</th>
+                            <th>Vacancy ref</th>
+                            <th>Number of applications</th>
+                            <th>Vacancy status</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        @foreach (var vacancy in Model.VacanciesSummary.Vacancies.Page)
+                        {
                             <tr>
-                                <th>Vacancy title</th>
-                                <th>Employer</th>
-                                <th>Vacancy ref</th>
-                                <th>Number of applications</th>
-                                <th>Vacancy status</th>
+                                <td>
+                                    <div class="vac-title">
+                                        @{
+                                            var title = string.IsNullOrEmpty(vacancy.NewVacancyViewModel.Title) ? "(No Title)" : vacancy.NewVacancyViewModel.Title;
+                                        }
+                                        <a href="@Url.RouteUrl(RecruitmentRouteNames.EditVacancy, new {vacancyReferenceNumber = vacancy.VacancyReferenceNumber})" class="disp-block link-unimp">@title@*<span class="inl-block">(? applications)</span>*@</a>
+                                    </div>
+                                </td>
+                                <td>
+                                    @vacancy.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name
+                                </td>
+                                <td>
+                                    @vacancy.VacancyReferenceNumber
+                                </td>
+                                <td>
+                                    X applications
+                                </td>
+                                <td>
+                                    @{ Html.RenderPartial("_vacancyStatus", @vacancy.Status); }
+                                    @{ Html.RenderPartial("_closingDate", @vacancy.VacancySummaryViewModel.ClosingDate); }
+                                </td>
                             </tr>
-                            </thead>
-                            <tbody>
-                            @foreach(var vacancy in Model.VacanciesSummary.Vacancies.Page)
-                            {
-                                <tr>
-                                    <td>
-                                        <div class="vac-title">
-                                            @{
-                                                var title = string.IsNullOrEmpty(vacancy.NewVacancyViewModel.Title) ? "(No Title)" : vacancy.NewVacancyViewModel.Title;
-                                            }
-                                            <a href="@Url.RouteUrl(RecruitmentRouteNames.EditVacancy, new {vacancyReferenceNumber = vacancy.VacancyReferenceNumber})" class="disp-block link-unimp">@title@*<span class="inl-block">(? applications)</span>*@</a>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        @vacancy.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name
-                                    </td>
-                                    <td>
-                                        @vacancy.VacancyReferenceNumber
-                                    </td>
-                                    <td>
-                                        X applications
-                                    </td>
-                                    <td>
-                                        @{ Html.RenderPartial("_vacancyStatus", @vacancy.Status); }
-                                        @{ Html.RenderPartial("_closingDate", @vacancy.VacancySummaryViewModel.ClosingDate); }
-                                    </td>
-                                </tr>
-                            }
-                            </tbody>
-                        </table>
-                        @*<div class="page-navigation font-xsmall small-btm-margin">
-                            <a href="#" class="page-navigation__btn previous disabled">
-                                <i class="arrow-button fa fa-angle-left"></i>
-                                <span class="description">Previous</span>
-                                <span class="counter">1 of 2</span>
-                            </a>
-                            <a href="#" class="page-navigation__btn next">
-                                <i class="arrow-button fa fa-angle-right"></i>
-                                <span class="description">Next</span>
-                                <span class="counter">2 of 2</span>
-                            </a>
-                        </div>*@
-                    </div>
-                </section>
+                        }
+                        </tbody>
+                    </table>
+                </div>
+            </section>
         </div>
+
+        <div class="page-navigation">
+
+            @{
+                var currentPage = Model.VacanciesSummary.Vacancies.CurrentPage;
+                var totalNumberOfPages = Model.VacanciesSummary.Vacancies.TotalNumberOfPages;
+                var prevLink = Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch) {CurrentPage = currentPage - 1});
+                var nextLink = Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch) {CurrentPage = currentPage + 1});
+            }
+
+            <a href="@prevLink"
+               style="visibility: @(currentPage == 1 ? "hidden" : "visible")"
+               class="page-navigation__btn previous">
+                <i class="arrow-button fa fa-angle-left"></i>
+                <span class="description">Previous <span class="hide-mob">page</span></span>
+                <span class="counter">@(currentPage - 1) of @totalNumberOfPages</span>
+            </a>
+            <a href="@nextLink"
+               style="visibility: @(currentPage == totalNumberOfPages ? "hidden" : "visible")"
+               class="page-navigation__btn next">
+                <i class="arrow-button fa fa-angle-right"></i>
+                <span class="description">Next <span class="hide-mob">page</span></span>
+                <span class="counter">@(currentPage + 1) of @totalNumberOfPages</span>
+            </a>
+
+        </div>
+
     </div>
 }
