--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -10,8 +10,10 @@
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
+    @Html.HiddenFor(m => m.VacanciesSummary.VacanciesSummarySearch.FilterType)
+
     <div class="grid-wrapper">
-        <div class="grid-1-2 grid">
+        <div class="grid grid-1-2">
             <h1 class="heading-xlarge">
                 Recruitment home
                 <span class="heading-secondary">@Model.ProviderViewModel.ProviderName</span>
@@ -29,15 +31,17 @@
                 else
                 {
                     <p class="form-label">Change provider site</p>
-                    @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites, new {@class = "chosen-select"})
-                    <button id="change-training-site-button" type="submit" name="ProviderSiteAction" class="button" value="ChangeProviderSite">Change</button>
+                    @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites, new {id = "provider-site", @class = "chosen-select grid grid-1-1" })
+                    <noscript>
+                        <button class="button" name="ChangeProviderSiteAction" value="ChangeProviderSite">Change</button>
+                    </noscript>
                 }
             </div>
         </div>
     </div>
 
     <section>
-        <button id="new-vacancy-button" type="submit" name="ProviderSiteAction" class="button" value="NewVacancy">Create new vacancy</button>
+        <button id="new-vacancy-button" type="submit" name="NewVacancyAction" class="button" value="NewVacancy">Create new vacancy</button>
     </section>
 
     <section class="grid-wrapper">
@@ -47,10 +51,10 @@
         <h2 class="heading-medium">Your vacancies
             @if (filterType != VacanciesSummaryFilterTypes.All)
             {
-                <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.All})" class="font-small">Show all</a>
+                <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.All))" class="font-small">Show all</a>
             }
         </h2>
-        <div class="grid" style="width: 16.6%">
+        <div class="grid" style="width: 16.666666666%">
             <p style="text-align: center">
                 @if (filterType == VacanciesSummaryFilterTypes.Live)
                 {
@@ -58,12 +62,12 @@
                 }
                 else
                 {
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.Live})">Live</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Live))">Live</a>
                 }
             </p>
             <p style="text-align: center; font-size: 96px; font-weight: 700;">@Model.VacanciesSummary.LiveCount</p>
         </div>
-        <div class="grid" style="width: 16.6%">
+        <div class="grid" style="width: 16.666666666%">
             <p style="text-align: center">
                 @if (filterType == VacanciesSummaryFilterTypes.Approved)
                 {
@@ -71,12 +75,12 @@
                 }
                 else
                 {
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.Approved})">Approved</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Approved))">Approved</a>
                 }
             </p>
             <p style="text-align: center; font-size: 96px; font-weight: 700;">@Model.VacanciesSummary.ApprovedCount</p>
         </div>
-        <div class="grid" style="width: 16.6%">
+        <div class="grid" style="width: 16.666666666%">
             <p style="text-align: center">
                 @if (filterType == VacanciesSummaryFilterTypes.Rejected)
                 {
@@ -84,12 +88,12 @@
                 }
                 else
                 {
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.Rejected})">Rejected</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Rejected))">Rejected</a>
                 }
             </p>
             <p style="text-align: center; font-size: 96px; font-weight: 700;">@Model.VacanciesSummary.RejectedCount</p>
         </div>
-        <div class="grid" style="width: 16.6%">
+        <div class="grid" style="width: 16.666666666%">
             <p style="text-align: center">
                 @if (filterType == VacanciesSummaryFilterTypes.ClosingSoon)
                 {
@@ -97,12 +101,12 @@
                 }
                 else
                 {
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.ClosingSoon})">Closing Soon</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.ClosingSoon))">Closing Soon</a>
                 }
             </p>
             <p style="text-align: center; font-size: 96px; font-weight: 700;">@Model.VacanciesSummary.ClosingSoonCount</p>
         </div>
-        <div class="grid" style="width: 16.6%">
+        <div class="grid" style="width: 16.666666666%">
             <p style="text-align: center">
                 @if (filterType == VacanciesSummaryFilterTypes.Closed)
                 {
@@ -110,12 +114,12 @@
                 }
                 else
                 {
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.Closed})">Closed</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Closed))">Closed</a>
                 }
             </p>
             <p style="text-align: center; font-size: 96px; font-weight: 700;">@Model.VacanciesSummary.ClosedCount</p>
         </div>
-        <div class="grid" style="width: 16.6%">
+        <div class="grid" style="width: 16.666666666%">
             <p style="text-align: center">
                 @if (filterType == VacanciesSummaryFilterTypes.Draft)
                 {
@@ -123,7 +127,7 @@
                 }
                 else
                 {
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new {FilterType = VacanciesSummaryFilterTypes.Draft})">Draft</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Draft))">Draft</a>
                 }
             </p>
             <p style="text-align: center; font-size: 96px; font-weight: 700;">@Model.VacanciesSummary.DraftCount</p>
@@ -214,20 +218,29 @@
             @{
                 var currentPage = Model.VacanciesSummary.Vacancies.CurrentPage;
                 var totalNumberOfPages = Model.VacanciesSummary.Vacancies.TotalNumberOfPages;
-                var prevLink = Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch) {CurrentPage = currentPage - 1});
-                var nextLink = Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch) {CurrentPage = currentPage + 1});
+                var prevLink = Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, currentPage - 1));
+                var nextLink = Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, currentPage + 1));
             }
-
+            
             <a href="@prevLink"
-               style="visibility: @(currentPage == 1 ? "hidden" : "visible")"
-               class="page-navigation__btn previous">
+               style="visibility: @(currentPage == 1 ? "hidden" : "visible"); width: 33.333333333%"
+               class="page-navigation__btn previous grid grid-1-3">
                 <i class="arrow-button fa fa-angle-left"></i>
                 <span class="description">Previous <span class="hide-mob">page</span></span>
                 <span class="counter">@(currentPage - 1) of @totalNumberOfPages</span>
             </a>
+
+            <div class="grid grid-1-3 page-navigation__btn" style="width: 33.333333333%; text-align: center">
+                <label for="page-size" class="heading-small inline">Display results</label>
+                @Html.DropDownListFor(m => m.VacanciesSummary.VacanciesSummarySearch.PageSize, Model.VacanciesSummary.VacanciesSummarySearch.PageSizes, new { id = "page-size" })
+                <noscript>
+                    <button class="button show-nojs" name="ChangePageSizeAction" value="ChangePageSize">View</button>
+                </noscript>
+            </div>
+
             <a href="@nextLink"
-               style="visibility: @(currentPage == totalNumberOfPages ? "hidden" : "visible")"
-               class="page-navigation__btn next">
+               style="visibility: @(currentPage == totalNumberOfPages ? "hidden" : "visible"); width: 33.333333333%"
+               class="page-navigation__btn next grid grid-1-3">
                 <i class="arrow-button fa fa-angle-right"></i>
                 <span class="description">Next <span class="hide-mob">page</span></span>
                 <span class="counter">@(currentPage + 1) of @totalNumberOfPages</span>
@@ -236,4 +249,9 @@
         </div>
 
     </div>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/dashboard")
 }
