--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Questions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Questions.cshtml
@@ -18,11 +18,12 @@
     <section>
         <div class="form-group">
             @Html.FormTextAreaFor(m => m.FirstQuestion, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text", autofocus = "autofocus" })
+            @Html.EditorFor(m => m.FirstQuestionComment, "Comment")
             @Html.FormTextAreaFor(m => m.SecondQuestion, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+            @Html.EditorFor(m => m.SecondQuestionComment, "Comment")
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button" name="VacancyQuestions" value="VacancyQuestions">Save and preview vacancy</button>
-        <button id="VacancyQuestionsAndExit" type="submit" class="button-link" name="VacancyQuestions" value="VacancyQuestionsAndExit">Save and exit</button>
+        <button type="submit" class="button">Save</button>
     </div>
 }
