--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Recruit an Apprentice";
 }
 
-@using (Html.BeginForm(null, "ProviderUser", null, FormMethod.Post))
+@using (Html.BeginForm(null, "ProviderUser", FormMethod.Post, new { name = "provider-site-form" }))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
@@ -31,7 +31,7 @@
                 else
                 {
                     <p class="form-label">Change provider site</p>
-                    @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites, new {id = "provider-site", @class = "chosen-select grid grid-1-1" })
+                    @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites, new {id = "provider-site", @class = "chosen-select grid grid-1-1"})
                     <noscript>
                         <button class="button" name="ChangeProviderSiteAction" value="ChangeProviderSite">Change</button>
                     </noscript>
@@ -43,6 +43,14 @@
     <section>
         <button id="new-vacancy-button" type="submit" name="NewVacancyAction" class="button" value="NewVacancy">Create new vacancy</button>
     </section>
+}
+
+@using (Html.BeginForm(null, "ProviderUser", FormMethod.Post, new { name = "vacancy-search-form" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
+    @Html.HiddenFor(m => m.VacanciesSummary.VacanciesSummarySearch.FilterType)
 
     <section class="grid-wrapper">
         @{
@@ -137,31 +145,14 @@
     <div class="grid-wrapper">
         <div class="grid grid-1-1">
             <section>
-                <div class="grid-wrapper font-xsmall med-btm-margin">
-                    @*<div class="grid grid-2-3">
-                        <div class="inner-block-padr">
-                            <select name="" id="" class="form-label">
-                                <option value="" hidden>-- Filter vacancies --</option>
-                                <option value="">Employer</option>
-                                <option value="">Title</option>
-                                <option value="">Framework</option>
-                            </select>
-                            <input type="text" class="form-control width-all-1-1" id="filter-employers">
-                        </div>
+                @{ var open = string.IsNullOrEmpty(Model.VacanciesSummary.VacanciesSummarySearch.SearchString) ? "" : "open"; }
+                <details @open>
+                    <summary>Search your employers</summary>
+                    <div class="detail-content">
+                        @Html.TextBoxFor(m => m.VacanciesSummary.VacanciesSummarySearch.SearchString)
+                        <button class="button" name="SearchVacanciesAction" value="SearchVacancies">Search vacancies</button>
                     </div>
-                    <div class="grid grid-1-3 ta-right">
-                        <input type="text" class="form-control invisible med-btm-margin">
-                        <select name="" id="" class="small-right-margin">
-                            <option value="" hidden>-- Filter status --</option>
-                            <option value="">All</option>
-                            <option value="">Live</option>
-                            <option value="">For review</option>
-                            <option value="">Submitted</option>
-                            <option value="">Drafts</option>
-                            <option value="">Closed</option>
-                        </select>
-                    </div>*@
-                </div>
+                </details>
                 <div class="tabbed-element tab1 active width-all-1-1">
                     <table class="no-btm-margin">
                         <colgroup>
@@ -234,7 +225,7 @@
                 <label for="page-size" class="heading-small inline">Display results</label>
                 @Html.DropDownListFor(m => m.VacanciesSummary.VacanciesSummarySearch.PageSize, Model.VacanciesSummary.VacanciesSummarySearch.PageSizes, new { id = "page-size" })
                 <noscript>
-                    <button class="button show-nojs" name="ChangePageSizeAction" value="ChangePageSize">View</button>
+                    <button class="button" name="SearchVacanciesAction" value="SearchVacancies">View</button>
                 </noscript>
             </div>
 
