--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -11,7 +11,7 @@
         <span class="tag-pending" style="width: 110px">Submitted</span>
         break;
     case ProviderVacancyStatuses.RejectedByQA:
-        <span class="tag-pending" style="width: 110px">Rejected</span>
+        <span class="tag-pending" style="width: 110px">Referred</span>
         break;
     case ProviderVacancyStatuses.Live:
         <span class="tag-live" style="width: 110px">Live</span>
