--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
@@ -9,8 +9,7 @@
 
 <p class="text">
     An email has been sent to <b class="">@Model.EmailAddress</b>.
-    It’ll contain a 6-character code that you’ll need to verify your email
-    address.
+    It’ll contain a 6-character code you’ll need in order to verify your email address.
 </p>
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.VerifyEmail, FormMethod.Post))
