--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="grid grid-1-3">
             <p class="page-link hide-nojs">
-                <a class="print-trigger" href=""><i class="fa fa-print"></i>Print this page</a>
+                <!--<a class="print-trigger" href=""><i class="fa fa-print"></i>Print this page</a>-->
             </p>
         </div>
     </div>
@@ -62,23 +62,39 @@
                             <br/>@:(the hours are based on the candidate being over 18)
                         }
                     </p>
-                    
+
                     <h3 class="bold-small">
-                        @Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i>
+                        @if (Model.VacancySummaryViewModel.WageType == WageType.Custom)
+                        {
+                            <span>@Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i></span>
+                        }
+                        else
+                        {
+                            <span>Wage <i class="fa fa-check the-icon" style="color: green;"></i></span>
+                        }
                     </h3>
 
                     <p id="vacancy-wage">@Model.VacancySummaryViewModel.WageDisplayText</p>
 
-                    @if (Model.VacancySummaryViewModel.WageType != WageType.Custom)
+                    @if (Model.VacancySummaryViewModel.WageType == WageType.ApprenticeshipMinimumWage)
                     {
                         <details>
-                            <summary>TODO: Wage explanation</summary>
+                            <summary>National Minimum Wage<br/>for apprentices explained</summary>
                             <div class="detail-content">
-                                The current National Minimum Wage (NMW) rate for an apprentice is £@Wages.ApprenticeMinimumWage per hour.
-                                This rate applies to apprentices aged 16 to 18 and those aged 19 or over who are in their first year.
-                                Apprentices must be paid at least the NMW rate for their age if they're aged 19 or over and have completed their first year.
-                                The current NMW rates are £@Wages.Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.Over21NationalMinimumWage for anyone aged 21 and over.
-                                Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).    
+                                The current National Minimum Wage (NMW) for apprentices is £@Wages.ApprenticeMinimumWage per hour.<br />
+                                This rate applies to apprentices aged 16 to 18 and those aged 19 or over who are in their first year.<br />
+                                Apprentices must be paid at least the NMW for their age if they're aged 19 or over and have completed their first year.
+                            </div>
+                        </details>
+                    }
+
+                    @if (Model.VacancySummaryViewModel.WageType == WageType.NationalMinimumWage)
+                    {
+                        <details>
+                            <summary>National Minimum Wage</summary>
+                            <div class="detail-content">
+                                The current National Minimum Wage rates are £@Wages.Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.Over21NationalMinimumWage for anyone aged 21 and over.<br />
+                                Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).
                             </div>
                         </details>
                     }
@@ -306,7 +322,7 @@
     <section>
         <div class="form-group">
             <button type="submit" class="button">Submit for approval</button>
-            <a id="dashboardLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Return to dashboard</a>
+            <a id="dashboardLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Save and exit</a>
         </div>
     </section>
 }
